--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,6 +21,7 @@
     owner: root
     group: root
     mode: 0644
+  no_log: true
   notify: Restart telegraf service
 
 - name: Define environment variables
