--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,7 +26,7 @@
 
 - name: Define environment variables
   community.general.ini_file:
-    path: "/etc/telegraf.env"
+    path: /etc/telegraf.env
     section: ""
     option: "{{ item.key }}"
     value: "{{ item.value }}"
@@ -39,7 +39,7 @@
 
 - name: Define Docker container labels
   community.general.ini_file:
-    path: "/etc/telegraf.label"
+    path: /etc/telegraf.label
     section: ""
     option: "{{ item.key }}"
     value: "{{ item.value }}"
