--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install test dependencies
         run: |
           python -m pip install --disable-pip-version-check editorconfig-checker
-          python -m pip install --disable-pip-version-check molecule[ansible,docker,lint,test]
+          python -m pip install --disable-pip-version-check molecule[ansible-base,docker,lint,test]
 
       - name: Run Molecule tests
         run: |
